[gd_scene load_steps=6 format=2]

[ext_resource path="res://form.gd" type="Script" id=1]
[ext_resource path="res://neo-brutal-theme.tres" type="Theme" id=2]
[ext_resource path="res://IBMPlexSans-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="Form" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 344.0
margin_bottom = 784.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 328.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 72 )
custom_fonts/font = SubResource( 2 )
text = "Solar Output Predictor"
align = 1
valign = 1

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 328.0
margin_bottom = 150.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBox"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Place Name"
valign = 1

[node name="Place" type="LineEdit" parent="MarginContainer/VBoxContainer/VBox"]
unique_name_in_owner = true
margin_top = 40.0
margin_right = 328.0
margin_bottom = 70.0
size_flags_horizontal = 3
placeholder_text = "Mumbai"
placeholder_alpha = 0.4
caret_blink = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 328.0
margin_bottom = 228.0
custom_constants/separation = 0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Country        "
valign = 1

[node name="Country" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 40.0
margin_right = 328.0
margin_bottom = 70.0
size_flags_horizontal = 3
placeholder_text = "India"
placeholder_alpha = 0.4
caret_blink = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 236.0
margin_right = 328.0
margin_bottom = 306.0
custom_constants/separation = 0

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Start Date   "
valign = 1

[node name="Start" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 40.0
margin_right = 328.0
margin_bottom = 70.0
size_flags_horizontal = 3
placeholder_text = "yyyy-mm-dd"
placeholder_alpha = 0.4
caret_blink = true

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 314.0
margin_right = 328.0
margin_bottom = 384.0
custom_constants/separation = 0

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer3"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "End Date   "
valign = 1

[node name="End" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
margin_top = 40.0
margin_right = 328.0
margin_bottom = 70.0
size_flags_horizontal = 3
placeholder_text = "yyyy-mm-dd"
placeholder_alpha = 0.4
caret_blink = true

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 392.0
margin_right = 328.0
margin_bottom = 462.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer4"]
margin_right = 328.0
margin_bottom = 40.0

[node name="Count" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
unique_name_in_owner = true
margin_right = 163.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Solar Panels Count   |"
valign = 1

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
margin_left = 167.0
margin_right = 328.0
margin_bottom = 40.0
text = "Input in area"

[node name="CountEntry" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
margin_top = 40.0
margin_right = 328.0
margin_bottom = 70.0
size_flags_horizontal = 3
placeholder_text = "10"
placeholder_alpha = 0.4
caret_blink = true

[node name="VBoxContainer5" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 470.0
margin_right = 328.0
margin_bottom = 540.0
custom_constants/separation = 0

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer5"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Power Rating (W)"
valign = 1

[node name="Power" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer5"]
unique_name_in_owner = true
margin_top = 40.0
margin_right = 328.0
margin_bottom = 70.0
size_flags_horizontal = 3
placeholder_text = "200"
placeholder_alpha = 0.4
caret_blink = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 548.0
margin_right = 328.0
margin_bottom = 620.0
custom_constants/margin_top = 26
custom_constants/margin_bottom = 16

[node name="Submit" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
margin_top = 26.0
margin_right = 328.0
margin_bottom = 56.0
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Calculate!"

[connection signal="toggled" from="MarginContainer/VBoxContainer/VBoxContainer4/HBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/MarginContainer/Submit" to="." method="_on_Button_button_down"]
